# TSNFE

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  conda_commands.sh  cookies.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: daily-analyst-table.yml
config/: analysts.yaml  config.yaml  prompts.yaml  stock_aliases.json
data/: failed_downloads.json  failed_processing.json  video_list.json
data/stock_codes/: all_stocks.csv  tpex_stocks.csv  twse_stocks.csv
docs/: GPU_SETUP.md  api_setup.md  github_actions_daily_table.md  repo_organization.md
examples/: example_pipeline.py
local/: README.md  analyst_list.txt
logs/: last_gemini_multimodal_response.json
scripts/: check_progress.sh  check_secrets.py  clean_yt_cookies.py  daily_analyst_table.py  debug_gemini.py  demo.py  fetch_channel_videos.py  process_video.py  process_with_gemini_web.py  quick_transcribe.py  run_with_gpu.sh  setup.sh  start_chrome_cdp.ps1  test_system.py  test_transcribe.py  update_stock_list.py
src/tw_analyst_pipeline/: __init__.py
src/tw_analyst_pipeline/extraction/: gemini_web_client.py  llm_client.py  schemas.py
src/tw_analyst_pipeline/pipeline/: orchestrator.py
src/tw_analyst_pipeline/stock_data/: validators.py
src/tw_analyst_pipeline/transcription/: __init__.py  gemini_engine.py  whisper_engine.py
src/tw_analyst_pipeline/utils/: config.py  logging.py  retry.py
src/tw_analyst_pipeline/youtube/: __init__.py  browser_ingestor.py  downloader.py  fetcher.py
tests/unit/: test_recommendation_feature.py
